--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "body-parser": "^1.19.0",
         "ejs": "^3.0.1",
         "express": "^4.17.1",
+        "firebase": "^7.6.0",
         "include-html": "^1.2.1",
         "mongoose": "^5.7.14",
         "nodemon": "^2.0.2"
