--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     },
     "homepage": "https://github.com/abdosoltan349/game#readme",
     "dependencies": {
+        "alert-node": "^2.0.3",
         "body-parser": "^1.19.0",
         "ejs": "^3.0.1",
         "express": "^4.17.1",
         "firebase": "^7.6.0",
+        "firebase-tools": "^7.10.0",
         "include-html": "^1.2.1",
         "mongoose": "^5.7.14",
         "nodemon": "^2.0.2"
